copyright name updated

--- a/valentina/index.html
+++ b/valentina/index.html
@@ -501,7 +501,7 @@
     <!-- ================ copyright section start here ========== -->
     <div class="copyright">
         <div class="container">
-            <p>Copyright &copy; 2018. All rights reserved by<span>DESIGNER</span></p>
+            <p>Copyright &copy; 2018. All rights reserved by<span>Rasel Sharif</span></p>
         </div>
     </div>
     <!-- ================ copyright section end here ========== -->
